--- a/src/app/photos/photos.component.scss
+++ b/src/app/photos/photos.component.scss
@@ -10,6 +10,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: auto;
+
+  @media only screen and (max-width: 576px) {
+    display: none;
+  }
 
   &__item {
     cursor: pointer;
